welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:21: error: not found: value c
if(getCouleurSol()==c:Color){
                    ^SlugSnail:21: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
if(getCouleurSol()==c:Color){
                     ^